--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -21,19 +21,13 @@
         <activity
             android:name="com.ezz.bytourism1.MainActivity"
             android:label="@string/app_name" >
-           <!--  <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter> -->
         </activity>
-        <activity android:name=".AllSightDetail"
-            android:label="@string/app_name" >
-            <intent-filter>
+        <activity android:name=".AllSightDetail">
+           <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter> 
         </activity>
     </application>
 
