--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,15 +17,19 @@
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name="com.ezz.bytourism1.MainActivity"
             android:label="@string/app_name" >
         </activity>
-        <activity android:name=".AllSightDetail">
+        <activity
+                android:name=".RegistActivity"
+                android:label="@string/app_name" >
+        </activity>
+        <activity android:name=".LoginActivity"
+                  android:label="登陆" >
            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter> 
         </activity>
