--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,12 +22,17 @@
             android:name="com.ezz.bytourism1.MainActivity"
             android:label="@string/app_name" >
         </activity>
+
         <activity
                 android:name=".RegistActivity"
                 android:label="@string/app_name" >
         </activity>
+        <activity
+                android:name=".Personal_centerActivity"
+                android:label="@string/app_name" >
+        </activity>
         <activity android:name=".LoginActivity"
-                  android:label="登陆" >
+                  android:label="ByTourisim1" >
            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
