--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,7 +24,11 @@
         </activity>
 
         <activity
-                android:name=".RegistActivity"
+            android:name=".RegistActivity"
+            android:label="@string/app_name" >
+    </activity>
+        <activity
+                android:name=".AllSightDetail"
                 android:label="@string/app_name" >
         </activity>
         <activity
