--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,16 +32,23 @@
                 android:label="@string/app_name" >
         </activity>
         <activity
+                android:name=".Choose1Activity"
+                android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
                 android:name=".Personal_centerActivity"
+                android:launchMode="singleTask"
                 android:label="@string/app_name" >
         </activity>
         <activity android:name=".LoginActivity"
                   android:label="ByTourisim1" >
-           <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter> 
+
         </activity>
+
     </application>
 
 </manifest>
