--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,19 +34,31 @@
         <activity
                 android:name=".Choose1Activity"
                 android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+
         </activity>
         <activity
                 android:name=".Personal_centerActivity"
                 android:launchMode="singleTask"
                 android:label="@string/app_name" >
         </activity>
+        <activity
+                android:name=".RoutesCollectActivity"
+                android:label="@string/app_name" >
+        </activity>
+        <activity
+                android:name=".RoutesCollectList"
+                android:label="@string/app_name" >
+        </activity>
+        <activity
+                android:name=".MyCollectActivity"
+                android:label="@string/app_name" >
+        </activity>
         <activity android:name=".LoginActivity"
                   android:label="ByTourisim1" >
-
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
     </application>
